--- a/style.css
+++ b/style.css
@@ -103,19 +103,19 @@ nav.TOC a, nav.TOC a:visited{
 
 /* body{background-color:#dce8d0;} */
 /* It seems that dark background is better to my eyes */
-body{background-color:#B8CDA3;} 
+body{background-color:#95C7ED;} 
 
 main.main-content, div.footnotes{
-  background-color:white;
+  background-color:#D4E5F7;
 }
 
 nav.TOC,nav.TOC a, nav.TOC a:visited{
-  background-color:#22211f;
-  color:#cec1aa;
+  background-color:#004876;
+  color:#d4eeff;
 }
 
 nav.TOC span:hover, nav.TOC span:hover *{
-  background-color:#66635d;
+  background-color:#437b9f;
 }
 
 
@@ -123,42 +123,4 @@ nav.TOC span:hover, nav.TOC span:hover *{
 figure.texsource, figure.shellcommand, figure.htmlsource, figure.luasource, figure.textsource{
   border:1px solid #cec1aa; 
   background-color:#d5e3c6;
-}
-
-/* ***************** */
-/* *** Dark mode *** */
-/* ***************** */
-
-/* Code from https://ar.al/2021/08/24/implementing-dark-mode-in-a-handful-of-lines-of-css-with-css-filters/ */
-
-@media (prefers-color-scheme: dark) {
-  /* Invert all elements on the body while attempting to not alter the hue substantially. */
-  body {
-    filter: invert(100%) hue-rotate(180deg);
-  }
-
-  /* Workarounds and optical adjustments. */
-
-  /* Firefox workaround: Set the background colour for the html
-     element separately because, unlike other browsers, Firefox
-     doesn’t apply the filter to the root element’s background. */
-  html {
-    background-color: #111;
-  }
-
-  /* Do not invert media (revert the invert). */
-  img, video, iframe {
-    filter: invert(100%) hue-rotate(180deg);
-  }
-
-
-  /* Re-enable code block backgrounds. */
-  pre {
-    filter: invert(6%);
-  }
-
-  /* Improve contrast on list item markers. */
-  li::marker {
-    color: #666;
-  }
 }
