--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ Color scheme
  * */
 :root{
   font-size: 16px;
+  font-family: Helvetica Neue, Helvetica, Arial;
 }
 
 /* the min width is calculated as:
